Add WIA.dll to StuffLib and reference to AdminTools

--- a/AdminTools/AdminTools.csproj
+++ b/AdminTools/AdminTools.csproj
@@ -71,8 +71,9 @@
       <HintPath>..\packages\MvvmLightLibs.5.1.1.0\lib\net45\GalaSoft.MvvmLight.Platform.dll</HintPath>
     </Reference>
     <Reference Include="Interop.WIA">
-      <HintPath>..\packages\Interop.WIA\Interop.WIA.dll</HintPath>
+      <HintPath>..\StuffLib\dlls\Interop.WIA.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
+      <Private>True</Private>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
