--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\PersonDataSaveDTO.cs" />
     <Compile Include="DTO\PersonRelativeDTO.cs" />
     <Compile Include="Implementation\ScannerService.cs" />
     <Compile Include="Implementation\ADUserSystemInfoService.cs" />
