Implemented work with person documents (scanning, attaching e-docs)
Updated work with Scanner via TwainDotNet (nuget package)

--- a/AdminTools/AdminTools.csproj
+++ b/AdminTools/AdminTools.csproj
@@ -70,11 +70,6 @@
     <Reference Include="GalaSoft.MvvmLight.Platform">
       <HintPath>..\packages\MvvmLightLibs.5.1.1.0\lib\net45\GalaSoft.MvvmLight.Platform.dll</HintPath>
     </Reference>
-    <Reference Include="Interop.WIA">
-      <HintPath>..\StuffLib\dlls\Interop.WIA.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
@@ -127,14 +122,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DTO\ThumbnailDTO.cs" />
     <Compile Include="DTO\PersonDTO.cs" />
     <Compile Include="DTO\UserPermissionsDTO.cs" />
-    <Compile Include="Helpers\WIAScanner.cs" />
     <Compile Include="ViewModel\EditPermissionViewModel.cs" />
     <Compile Include="ViewModel\PersonSuggestionProvider.cs" />
     <Compile Include="ViewModel\PermissionsTreeViewModel.cs" />
-    <Compile Include="ViewModel\ScanDocumentsViewModel.cs" />
     <Compile Include="ViewModel\UserAccountViewModel.cs" />
     <Compile Include="ViewModel\UserEditorViewModel.cs" />
     <Compile Include="ViewModel\UserViewModel.cs" />
@@ -145,9 +137,6 @@
     </Compile>
     <Compile Include="View\PermissionsTreeView.xaml.cs">
       <DependentUpon>PermissionsTreeView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\ScanDocumentsView.xaml.cs">
-      <DependentUpon>ScanDocumentsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\UserAccountView.xaml.cs">
       <DependentUpon>UserAccountView.xaml</DependentUpon>
@@ -172,10 +161,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\PermissionsTreeView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\ScanDocumentsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -255,7 +240,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
