--- a/MainLib/packages.config
+++ b/MainLib/packages.config
@@ -9,4 +9,5 @@
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="PropertyChanged.Fody" version="1.49.1" targetFramework="net45" developmentDependency="true" />
   <package id="SimpleInjector" version="2.7.3" targetFramework="net45" />
+  <package id="TwainDotNet" version="1.0.0" targetFramework="net45" />
 </packages>
