Added buttons for Add/Delete Relatives (not saving yet)
Minor changes in EditPerson

--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -125,6 +125,10 @@
   <ItemGroup>
     <Resource Include="Images\File_Unknown.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Add24x24.png" />
+    <Resource Include="Images\Remove24x24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
