Added buttons for all functions to Registry (intermediate commit)

--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -129,6 +129,13 @@
     <Resource Include="Images\Add24x24.png" />
     <Resource Include="Images\Remove24x24.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Attachments48x48.png" />
+    <Resource Include="Images\documentPrint48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Contract48x48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
