--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -159,6 +159,7 @@
     <Compile Include="CmdBehavior\CommandExecutionStrategy.cs" />
     <Compile Include="CmdBehavior\EventHandlerGenerator.cs" />
     <Compile Include="CmdBehavior\IExecutionStrategy.cs" />
+    <Compile Include="Converters\StringToVisibilityConverter.cs" />
     <Compile Include="Converters\DiagnosticsConverter.cs" />
     <Compile Include="Converters\ImageConverter.cs" />
     <Compile Include="Converters\UniversalMultiBooleanConverter.cs" />
