--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -122,15 +122,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\IsPrintedToColorConverter.cs" />
-    <Compile Include="DTO\AssignmentDTO.cs" />
     <Compile Include="DTO\ScheduledAssignmentDTO.cs" />
     <Compile Include="Exceptions\AssignmentConflictException.cs" />
     <Compile Include="Exceptions\SamePatientAssignmentConflictException.cs" />
     <Compile Include="Privileges.cs" />
     <Compile Include="Services\Interface\IScheduleService.cs" />
     <Compile Include="Services\Implementation\ScheduleService.cs" />
-    <Compile Include="Services\Implementation\PatientAssignmentService.cs" />
-    <Compile Include="Services\Interface\IPatientAssignmentService.cs" />
     <Compile Include="ViewModel\Schedule\CurrentPatientAssignmentsViewModel.cs" />
     <Compile Include="ViewModel\Schedule\CurrentPatientAssignmentViewModel.cs" />
     <Compile Include="ViewModel\Schedule\DayOfWeekViewModel.cs" />
@@ -343,7 +340,9 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
