--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -95,19 +95,25 @@
     <Compile Include="DTO\AssignmentScheduleDTO.cs" />
     <Compile Include="DTO\PersonDataSaveDTO.cs" />
     <Compile Include="DTO\PersonRelativeDTO.cs" />
+    <Compile Include="DTO\RecordDTO.cs" />
+    <Compile Include="DTO\VisitDTO.cs" />
     <Compile Include="Implementation\ADUserSystemInfoService.cs" />
+    <Compile Include="Implementation\AssignmentService.cs" />
     <Compile Include="Implementation\CommissionService.cs" />
     <Compile Include="Implementation\PatientAssignmentService.cs" />
     <Compile Include="Implementation\PermissionService.cs" />
+    <Compile Include="Implementation\VisitService.cs" />
     <Compile Include="Implementation\RecordService.cs" />
     <Compile Include="Implementation\PersonService.cs" />
     <Compile Include="Implementation\DocumentService.cs" />
     <Compile Include="Implementation\UserService.cs" />
+    <Compile Include="Interface\IAssignmentService.cs" />
     <Compile Include="Interface\ICommissionService.cs" />
     <Compile Include="Interface\IDocumentService.cs" />
     <Compile Include="Interface\IPatientAssignmentService.cs" />
     <Compile Include="Interface\IPermissionService.cs" />
     <Compile Include="Interface\IPersonService.cs" />
+    <Compile Include="Interface\IVisitService.cs" />
     <Compile Include="Interface\ISecurityService.cs" />
     <Compile Include="Interface\IRecordService.cs" />
     <Compile Include="Interface\IUserSystemInfoService.cs" />
