--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CF75CDE2-002C-4113-824A-03A3B7C6847B}</ProjectGuid>
+    <ProjectGuid>{62515044-F9C0-4D93-8B55-1407CCF8D3F2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Core</RootNamespace>
-    <AssemblyName>Core</AssemblyName>
+    <RootNamespace>Core.Wpf</RootNamespace>
+    <AssemblyName>Core.Wpf</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    <Reference Include="Prism, Version=6.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Prism.Core.6.0.1\lib\net45\Prism.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -45,14 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expressions\CompositeSimilarityExpressionProvider.cs" />
-    <Compile Include="Expressions\DateBasedSimilarityExpressionProvider.cs" />
-    <Compile Include="Expressions\ParameterReplacer.cs" />
-    <Compile Include="Extensions\LogExtensions.cs" />
-    <Compile Include="Services\Implementations\DisposableQueryable.cs" />
-    <Compile Include="Services\Interfaces\IDisposableQueryable.cs" />
-    <Compile Include="Expressions\ISimilarityExpressionProvider.cs" />
+    <Compile Include="Mvvm\Mediators\BusyMediator.cs" />
+    <Compile Include="Mvvm\Mediators\CriticalFailureMediator.cs" />
+    <Compile Include="Mvvm\Misc\ObservableCollectionEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Behaviors\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
