--- a/PatientSearchModule/PatientSearchModule.csproj
+++ b/PatientSearchModule/PatientSearchModule.csproj
@@ -40,6 +40,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
@@ -103,14 +107,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\User Input Processing\Search Expression Providers\CompositeSearchExpressionProvider.cs" />
-    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonBirthDateSearchExpressionProvider.cs" />
+    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonBirthDateSimilarityExpressionProvider.cs" />
     <Compile Include="Model\User Input Processing\Input Normalization\IUserInputNormalizer.cs" />
-    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonIdentityDocumentNumberSearchExpressionProvider.cs" />
-    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonMedNumberSearchExpressionProvider.cs" />
-    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonNamesSearchExpressionProvider.cs" />
+    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonIdentityDocumentNumberSimilarityExpressionProvider.cs" />
+    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonMedNumberSimilarityExpressionProvider.cs" />
+    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonNamesSimilarityExpressionProvider.cs" />
     <Compile Include="Model\User Input Processing\Input Normalization\UserInputNormalizer.cs" />
-    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonSnilsSearchExpressionProvider.cs" />
+    <Compile Include="Model\User Input Processing\Search Expression Providers\PersonSnilsSimilarityExpressionProvider.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Interfaces\IPatientSearchService.cs" />
@@ -134,6 +137,10 @@
     <ProjectReference Include="..\Core.Data\Core.Data.csproj">
       <Project>{304F5AEB-4189-4C9F-96DA-C32E57E5E1BE}</Project>
       <Name>Core.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core.Wpf\Core.Wpf.csproj">
+      <Project>{62515044-F9C0-4D93-8B55-1407CCF8D3F2}</Project>
+      <Name>Core.Wpf</Name>
     </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{cf75cde2-002c-4113-824a-03a3b7c6847b}</Project>
