--- a/Shell/packages.config
+++ b/Shell/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Fluent.Ribbon" version="3.5.1.198" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Prism.Core" version="6.0.1" targetFramework="net45" />
   <package id="Prism.Unity" version="6.0.1" targetFramework="net45" />
   <package id="Prism.Wpf" version="6.0.1" targetFramework="net45" />
